# defensa

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
data/mis_modelos/: training_history_ConvLSTM.json  training_history_ConvMLP.json  training_history_DroneNav-ConvLSTM.json  training_history_DroneNavSA-ConvLSTM.json  training_history_DroneNavSA-ConvLSTM_completo.json  training_history_DroneResNet18.json  training_history_MLP.json  training_history_MobileNetV3_large.json  training_history_MobileNetV3_small.json  training_history_PilotNetRegressor.json
docs/: PuertaAbierta.html  index.html  search.json
notebooks/: arquitecturas.py  evaluation_results.pkl  evaluation_summary.txt  model_comparison_global_metrics.csv  model_comparison_per_dimension.csv  normalization_params.pth  onnx_embedded_evaluationV2.ipynb  onnx_full_results_rpi5.pkl  onnx_metadata_rpi5.json
scripts/: compare_models_final.py  gen_radar_png.py
slides/: _quarto.yml  custom.scss  index-pptx.qmd  index.html  index.qmd  index.quarto_ipynb_1  index.quarto_ipynb_2
slides/index_files/libs/bootstrap/: bootstrap-2d19004cf945d991bb2d0ec47a4af80f.min.css
