[project]
name = "defensa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.8.0",
    "ipykernel>=6.22.0",
    "jupyter>=1.0.0",
    "lark==1.2.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.7.0",
    "pandas>=2.0.0",
    "pillow>=9.5.0",
    "plotly>=6.7.0",
    "pymavlink>=2.4.37",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]

[tool.uv]
override-dependencies = [
    "lark==1.2.2",
]
